--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,7 @@ body {
 html,
 body,
 #root {
-  height: 100%;
+  height: 100vh;
 }
 
 #root {
